Adicionando style à primeira seção e adicionei algumas coisas no index.

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,25 +11,23 @@
         <header>
             <ul>
                 <li>
-                    <img src="" alt="logo">
+                    <img src="logo.png" alt="logo">
 
                 </li>
                 <li>
-                    <a href="">Ajuda</a>
+                    <a href="" class="ajuda">Ajuda</a>
                 </li>
                 <li>
-                    <button>
-                        <a href="">Contato</a>
-                    </button>
+                    <button id="contato">Contato</button>
                 </li>
                 <li>
-                    <button>
-                        <a href="">Comece já</a>
-                    </button>
+                    <button id="comece">Comece já</button>
                 </li>
             </ul>
         </header>
-        <h1>Otimize a coleta e a análise de dados da ETA</h1>
+        <h1 id="frasePrincipal">Otimize a coleta e a análise de <br>dados da ETA</h1>
+        <p id="descricao">Lorem ipsum dolor sit amet, consectetur <a href="//" >adipiscing </a>elit. Sed <br>do eiusmod tempor incididunt ut labore.</p>
+        <button class="saiba">Saiba mais</button>
     </section>
     
 </body>
