Continuando a Landing page

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -29,7 +29,7 @@
                 </li>
             </ul>
         </header>
-        <h1>Otimize a coleta e a análise de dados da ETA</h1>
+        <h1>Otimize a coleta e a análise de dados da ETA industrial</h1>
     </section>
     
 </body>
