--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,8 +11,14 @@
         <header>
             <ul>
                 <li>
-                    <img src="" alt="logo">
+                    <img src="Group 20 (1) 1.png" alt="logo">
 
+                </li>
+                <li>
+                    <a href="">Área de Criação</a>
+                </li>
+                <li>
+                    <a href="">Análises e Relatórios</a>
                 </li>
                 <li>
                     <a href="">Ajuda</a>
