Adicionando estilo aos botões do header

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -20,16 +20,16 @@
                     <a href="">Análises e Relatórios</a>
                 </li>
                 <li>
-                    <a href="">Ajuda</a>
+                    <a href="" class="ajuda">Ajuda</a>
                 </li>
                 <li>
-                    <button>
-                        <a href="">Contato</a>
+                    <button class="contato">
+                        <a href="" id="a_contato">Contato</a>
                     </button>
                 </li>
                 <li>
-                    <button>
-                        <a href="">Comece já</a>
+                    <button class="comece">
+                        <a href="" id="comece_ja">Comece já</a>
                     </button>
                 </li>
             </ul>
