Finalizando a primeira seção e implementando elementos

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -10,7 +10,7 @@
     <header>
             <ul>
                 <li>
-                    <img src="Group 20 (1) 1.png" alt="logo">
+                    <img src="imagens/Group 20 (1) 1.png" alt="logo">
 
                 </li>
                 <li>
@@ -36,6 +36,11 @@
         </header>
     <section class="secao1">
         <h1>Otimize a coleta e a análise de dados da ETA industrial</h1>
+        <p>Onde a produção <span class="negrito1">fala</span> e a gestão <span class="negrito2">escuta.</span></p>
+        <button class="saiba mais">
+            <a href="">Saiba Mais</a>
+        </button>
+        <img src="imagens/ondinha.png" alt="">
     </section>
     
 </body>
