Finalizando o style da seção 1 do html.

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Landing Page</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
             <ul>
                 <li>
-                    <img src="imagens/Group 20 (1) 1.png" alt="logo">
+                    <img src="imagens/Group 20 (1) 1.png" alt="logo"
+                        class="icone">
 
                 </li>
                 <li>
-                    <a href="">Área de Criação</a>
+                    <a href class="criacao">Área de Criação</a>
                 </li>
                 <li>
-                    <a href="">Análises e Relatórios</a>
+                    <a href class="analise">Análises e Relatórios</a>
                 </li>
                 <li>
-                    <a href="" class="ajuda">Ajuda</a>
+                    <a href class="ajuda">Ajuda</a>
                 </li>
                 <li>
                     <button class="contato">
-                        <a href="" id="a_contato">Contato</a>
+                        <a href id="a_contato">Contato</a>
                     </button>
                 </li>
                 <li>
                     <button class="comece">
-                        <a href="" id="comece_ja">Comece já</a>
+                        <a href id="comece_ja">Comece já</a>
                     </button>
                 </li>
             </ul>
         </header>
-    <section class="secao1">
-        <h1>Otimize a coleta e a análise de dados da ETA industrial</h1>
-        <p>Onde a produção <span class="negrito1">fala</span> e a gestão <span class="negrito2">escuta.</span></p>
-        <button class="saiba mais">
-            <a href="">Saiba Mais</a>
-        </button>
-        <img src="imagens/ondinha.png" alt="">
-    </section>
-    
-</body>
+        <section class="secao1">
+            <h1>Otimize a coleta e a análise de dados da ETA industrial</h1>
+            <p class="descricao">Onde a produção <span
+                    class="negrito1">fala</span> e a gestão
+                <span class="negrito2">escuta</span>.</p>
+            <button class="saiba_mais">
+                <a href id="saiba">Saiba Mais</a>
+            </button>
+            <img src="imagens/ondinha.png" alt class="onda">
+        </section>
+
+    </body>
 </html>
