--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -46,5 +46,9 @@
             <img src="imagens/ondinha.png" alt class="onda">
         </section>
 
+        <section class="secao1">
+            <img src="imagens/Group 185.png" alt="imagem-sinara">
+        </section>
+
     </body>
 </html>
