Finalizando a inserção dos primeiros elemtos da seção 2

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -46,8 +46,11 @@
             <img src="imagens/ondinha.png" alt class="onda">
         </section>
 
-        <section class="secao1">
+        <section class="secao2">
             <img src="imagens/Group 185.png" alt="imagem-sinara">
+            <h1>O Que é o Sinara?</h1>
+            <p class="explicacao">O SINARA é um aplicativo que visa <br> descomplicar toda a burocracia, agilizar <br>
+            os processos manuais, e facilitar o <br> controle nas Estações de Tratamento de <br> Água, provendo soluções intuitivas, e <br> fáceis de implementar.   </p>
         </section>
 
     </body>
