Estilizando os elementos iniciais da segunda seção

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -36,7 +36,7 @@
             </ul>
         </header>
         <section class="secao1">
-            <h1>Otimize a coleta e a análise de dados da ETA industrial</h1>
+            <h1 class="texto_inicial">Otimize a coleta e a análise de dados da ETA industrial</h1>
             <p class="descricao">Onde a produção <span
                     class="negrito1">fala</span> e a gestão
                 <span class="negrito2">escuta</span>.</p>
@@ -47,8 +47,8 @@
         </section>
 
         <section class="secao2">
-            <img src="imagens/Group 185.png" alt="imagem-sinara">
-            <h1>O Que é o Sinara?</h1>
+            <img class="enviando" src="imagens/Group 185.png" alt="imagem-sinara">
+            <h1 id="oque">O Que é o Sinara?</h1>
             <p class="explicacao">O SINARA é um aplicativo que visa <br> descomplicar toda a burocracia, agilizar <br>
             os processos manuais, e facilitar o <br> controle nas Estações de Tratamento de <br> Água, provendo soluções intuitivas, e <br> fáceis de implementar.   </p>
         </section>
