Otimizando o código e fazendo algumas correções.

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -24,33 +24,45 @@
                     <a href class="ajuda">Ajuda</a>
                 </li>
                 <li>
-                    <button class="contato">
+                    <button class="botao-header" id="contato">
                         <a href id="a_contato">Contato</a>
                     </button>
                 </li>
                 <li>
-                    <button class="comece">
+                    <button class="botao-header" id="comece">
                         <a href id="comece_ja">Comece já</a>
                     </button>
                 </li>
             </ul>
         </header>
+
+        <!-- Primeira seção -->
+
         <section class="secao1">
-            <h1 class="texto_inicial">Otimize a coleta e a análise de dados da ETA industrial</h1>
+            <h1 class="texto_inicial">Otimize a coleta e a análise de dados da
+                ETA industrial</h1>
             <p class="descricao">Onde a produção <span
                     class="negrito1">fala</span> e a gestão
                 <span class="negrito2">escuta</span>.</p>
-            <button class="saiba_mais">
+            <button id="saiba_mais">
                 <a href id="saiba">Saiba Mais</a>
             </button>
-            <img src="imagens/ondinha.png" alt class="onda">
+            <img src="imagens/ondinha.png" alt id="onda">
         </section>
 
+        <!-- Segunda seção -->
+
         <section class="secao2">
-            <img class="enviando" src="imagens/Group 185.png" alt="imagem-sinara">
-            <h1 id="oque">O Que é o Sinara?</h1>
-            <p class="explicacao">O SINARA é um aplicativo que visa <br> descomplicar toda a burocracia, agilizar <br>
-            os processos manuais, e facilitar o <br> controle nas Estações de Tratamento de <br> Água, provendo soluções intuitivas, e <br> fáceis de implementar.   </p>
+            <img class="imagens-secao2" id="primeira-imagem"
+                src="imagens/Group 185.png" alt="imagem-sinara">
+            <h1 class="titulos-secao2" id="primeiro-titulo">O Que é o
+                Sinara?</h1>
+            <p class="explicacao" id="primeira-explicacao">O SINARA é um
+                aplicativo que visa <br> descomplicar toda a burocracia,
+                agilizar <br>
+                os processos manuais, e facilitar o <br> controle nas Estações
+                de Tratamento de <br> Água, provendo soluções intuitivas, e <br>
+                fáceis de implementar. </p>
         </section>
 
     </body>
