--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -63,6 +63,18 @@
                 os processos manuais, e facilitar o <br> controle nas Estações
                 de Tratamento de <br> Água, provendo soluções intuitivas, e <br>
                 fáceis de implementar. </p>
+                <hr>
+                <hr>
+            <h1 class="titulos-secao2" id="segundo-texto">
+                Como Funciona?
+            </h1>
+            <h2 class="subtitulo">
+                1. Criação dos formulários 
+            </h2>
+            <p class="explicacao" id="segunda-explicacao">A equipe administrativa cria<br> 
+            formulários personalizados <br> utilizando o aplicativo.</p>
+            <img class="imagens-secao2" id="segunda-imagem" src="imagens/Group 186.png" alt="">
+
         </section>
 
     </body>
