inserindo novo subtítulo e imagem na seção 2

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -75,8 +75,16 @@
                 administrativa cria<br>
                 formulários personalizados <br> utilizando o aplicativo.</p>
             <img class="imagens-secao2" id="segunda-imagem"
-                src="imagens/Group 187.png" alt>
-
+                src="imagens/Group 187.png" alt="img">
+            <img class="imagens-secao2" id="terceira-imagem"  
+            src="imagens/Group 188.png" alt="ima">
+            <h2 class="subtitulo" id="segundo-subtitulo">
+                2. Preenchimento dos formulários
+            </h2>
+            <p class="explicacao" id="segunda-explicacao">Os operadores preenchem os <br>
+                formulários criados e disponibilizados <br>
+                em tempo real.
+            </p>
         </section>
 
     </body>
