--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -81,7 +81,7 @@
             <h2 class="subtitulo" id="segundo-subtitulo">
                 2. Preenchimento dos formulários
             </h2>
-            <p class="explicacao" id="segunda-explicacao">Os operadores preenchem os <br>
+            <p class="explicacao" id="terceira-explicacao">Os operadores preenchem os <br>
                 formulários criados e disponibilizados <br>
                 em tempo real.
             </p>
