--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -85,6 +85,12 @@
                 formulários criados e disponibilizados <br>
                 em tempo real.
             </p>
+            <h2 class="subtitulo" id="terceiro-subtitulo">
+                3. Análise
+            </h2>
+            <p class="explicacao" id="quarta-explicacao"> Automaticamente são criados <br>
+            gráficos, planilhas, dashbpards e <br> alertas baseados nos dados <br> coletados dos formulários.</p>
+            <img class="imagens-secao2" id="quarta-imagem" src="imagens/Group 189.png" alt="img">
         </section>
 
     </body>
