Finalizando a estilização na seção 2 da landing page.

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -76,21 +76,25 @@
                 formulários personalizados <br> utilizando o aplicativo.</p>
             <img class="imagens-secao2" id="segunda-imagem"
                 src="imagens/Group 187.png" alt="img">
-            <img class="imagens-secao2" id="terceira-imagem"  
-            src="imagens/Group 188.png" alt="ima">
+            <img class="imagens-secao2" id="terceira-imagem"
+                src="imagens/Group 188.png" alt="ima">
             <h2 class="subtitulo" id="segundo-subtitulo">
                 2. Preenchimento dos formulários
             </h2>
-            <p class="explicacao" id="terceira-explicacao">Os operadores preenchem os <br>
+            <p class="explicacao" id="terceira-explicacao">Os operadores
+                preenchem os <br>
                 formulários criados e disponibilizados <br>
                 em tempo real.
             </p>
             <h2 class="subtitulo" id="terceiro-subtitulo">
                 3. Análise
             </h2>
-            <p class="explicacao" id="quarta-explicacao"> Automaticamente são criados <br>
-            gráficos, planilhas, dashbpards e <br> alertas baseados nos dados <br> coletados dos formulários.</p>
-            <img class="imagens-secao2" id="quarta-imagem" src="imagens/Group 189.png" alt="img">
+            <p class="explicacao" id="quarta-explicacao"> Automaticamente são
+                criados <br>
+                gráficos, planilhas, dashbpards e <br> alertas baseados nos
+                dados <br> coletados dos formulários.</p>
+            <img class="imagens-secao2" id="quarta-imagem"
+                src="imagens/Group 189.png" alt="img">
         </section>
 
     </body>
