Criando, Adicionando e Estilizando os elementos da seção 3

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -97,5 +97,13 @@
                 src="imagens/Group 189.png" alt="img">
         </section>
 
+        <!-- Terceira seção -->
+
+        <section class="secao3">
+            <h1 id="beneficios" > Principais benefícios</h1>
+            <img id="imagem-secao3" src="imagens/Group 105.png" alt="img">
+        </section>
+
+
     </body>
 </html>
