Realizando ajustes na seção 3 e finalizando-a.

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+        <!-- Cabeçalho -->
+
         <header>
             <ul>
                 <li>
@@ -54,7 +57,7 @@
         <section class="secao2">
             <img class="imagens-secao2" id="primeira-imagem"
                 src="imagens/Group 185.png" alt="imagem-sinara">
-            <h1 class="titulos-secao2" id="primeiro-titulo">O Que é o
+            <h1 class="titulos-secao" id="primeiro-titulo">O Que é o
                 Sinara?</h1>
             <p class="explicacao" id="primeira-explicacao">O SINARA é um
                 aplicativo que visa <br> descomplicar toda a burocracia,
@@ -64,7 +67,7 @@
                 fáceis de implementar. </p>
             <hr class="divisao-secao2" id="primeira-linha">
             <hr class="divisao-secao2" id="segunda-linha">
-            <h1 class="titulos-secao2" id="segundo-texto">
+            <h1 class="titulos-secao" id="segundo-titulo">
                 Como Funciona?
             </h1>
             <h2 class="subtitulo">
@@ -90,7 +93,7 @@
             </h2>
             <p class="explicacao" id="quarta-explicacao"> Automaticamente são
                 criados <br>
-                gráficos, planilhas, dashbpards e <br> alertas baseados nos
+                gráficos, planilhas, dashboards e <br> alertas baseados nos
                 dados <br> coletados dos formulários.</p>
             <img class="imagens-secao2" id="quarta-imagem"
                 src="imagens/Group 189.png" alt="img">
@@ -99,8 +102,60 @@
         <!-- Terceira seção -->
 
         <section class="secao3">
-            <h1 id="beneficios" > Principais benefícios</h1>
-            <img id="imagem-secao3" src="imagens/Group 105.png" alt="img">
+            <h1 class="titulos-secao" id="terceiro-titulo"> Principais
+                benefícios</h1>
+            <table>
+                <tr>
+                    <td class="elemento-beneficios">
+                        <div class="circulos" id="circulo-laranja"> <img
+                                id="cadeado"
+                                src="imagens/Cadeado.png"
+                                alt="icone"></div>
+                        <h3 class="subtitulo-secao3">Dados digitalizados e
+                            seguros</h3>
+                        <p class="texto-explicativo">Registros organizados e
+                            acessíveis a qualquer momento.</p>
+
+                    </td>
+                    <td class="elemento-beneficios">
+                        <div class="circulos" id="circulo-azul-claro"> <img
+                                id="papel"
+                                src="imagens/Papel.png"
+                                alt="icone"></div>
+                        <h3 class="subtitulo-secao3">Menos erros em coletas de
+                            dados</h3>
+                        <p class="texto-explicativo">Validações automáticas que
+                            garantem precisão nos regristro.</p>
+
+                    </td>
+                    <td class="elemento-beneficios">
+                        <div class="circulos" id="circulo-cinza"> <img
+                                id="interface"
+                                src="imagens/Interface.png"
+                                alt="icone"></div>
+                        <h3 class="subtitulo-secao3">Interface intuitiva</h3>
+                        <p class="texto-explicativo">Fácil de usar por
+                            operadores e gestores.</p>
+
+                    </td>
+                    <td class="elemento-beneficios">
+                        <div class="circulos" id="circulo-azul"> <img
+                                id="prancheta"
+                                src="imagens/Prancheta.png"
+                                alt="icone"></div>
+                        <h3 class="subtitulo-secao3">Controle de estoque
+                            eficiente</h3>
+                        <p class="texto-explicativo">Gestão precisa de insumos,
+                            evitando desperdícios.</p>
+
+                    </td>
+                </tr>
+            </table>
+            <hr class="segunda-divisao">
+            <hr class="segunda-divisao">
+        </section>
+        <section class="secao4">
+
         </section>
     </body>
 </html>
