Adicionando todos os elementos da seção 4

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -154,7 +154,26 @@
             <hr class="segunda-divisao">
             <hr class="segunda-divisao">
         </section>
+
+        <!--Quarta seção-->
         <section class="secao4">
+            <h1 class="titulos-secao" id="quarto-titulo">
+                Colaboradores
+            </h1>
+            <div class="quadro" id="quadro-colaboradores">
+                <h2>Marcos saliente</h2>
+                <img src="imagens/saliente.png" alt="saliencia">
+                <p class="explicacao" id="explicacao-secao4">Eu sou fulano the town blá blá <br> blá
+                tal tal tal uhuuuu verdade <br> gosto disso e daquilo tenho 35 <br> anos e sou do sétimo ano do <br> germinare construção</p>
+                <div class="icones-redes" id="insta">
+                    <a target="_blank" href="https://www.instagram.com/ygona.moura/"><img src="imagens/instagram-svgrepo-com 1 (1).png" alt="insta"></a>
+                </div>
+                
+                <div class="icones-redes" id="github">
+                    <a target="_blank" href="https://github.com/buscariolo-rogerio"><img src="imagens/git.png" alt="igt"></a> 
+                </div>
+                <button class="botao-carrossel" id="avancar"></button>
+            </div>
 
         </section>
     </body>
