--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -161,18 +161,30 @@
                 Colaboradores
             </h1>
             <div class="quadro" id="quadro-colaboradores">
-                <h2>Marcos saliente</h2>
-                <img src="imagens/saliente.png" alt="saliencia">
-                <p class="explicacao" id="explicacao-secao4">Eu sou fulano the town blá blá <br> blá
-                tal tal tal uhuuuu verdade <br> gosto disso e daquilo tenho 35 <br> anos e sou do sétimo ano do <br> germinare construção</p>
+                <h2 class="nomes-colaboradores" id="marcos-saliente">Marcos
+                    saliente</h2>
+                <img src="imagens/saliente.png" alt="saliencia"
+                    id="imagem-colaborador">
+                <p class="explicacao" id="explicacao-secao4">Eu sou fulano the
+                    town blá blá <br> blá
+                    tal tal tal uhuuuu verdade <br> gosto disso e daquilo tenho
+                    35 <br> anos e sou do sétimo ano do <br> germinare
+                    construção</p>
                 <div class="icones-redes" id="insta">
-                    <a target="_blank" href="https://www.instagram.com/ygona.moura/"><img src="imagens/instagram-svgrepo-com 1 (1).png" alt="insta"></a>
+                    <a target="_blank"
+                        href="https://www.instagram.com/ygona.moura/"><img
+                            src="imagens/instagram-svgrepo-com 1 (1).png"
+                            alt="insta"></a>
                 </div>
-                
+
                 <div class="icones-redes" id="github">
-                    <a target="_blank" href="https://github.com/buscariolo-rogerio"><img src="imagens/git.png" alt="igt"></a> 
+                    <a target="_blank"
+                        href="https://github.com/buscariolo-rogerio"><img
+                            src="imagens/git.png" alt="igt"></a>
                 </div>
-                <button class="botao-carrossel" id="avancar"></button>
+                <button class="botao-carrossel" id="avancar"><img
+                        src="/Landing_page/imagens/seta.png"
+                        alt="seta"></button>
             </div>
 
         </section>
