Finalizando a inserção dos elementos da landing page.

--- a/Landing_page/index.html
+++ b/Landing_page/index.html
@@ -188,5 +188,30 @@
             </div>
 
         </section>
+
+        <!--Quinta seção -->
+        <section class="secao5">
+            <h1 class="titulos-secao" id="quinto-titulo">Alguma dúvida?</h1>
+            <p id="subtitulo-secao5">Nossa equipe está aqui para ajudar! Entre em contato conosco para suporte.</p>
+            <div class="quadro" id="quadro-ajuda">
+                <h2 class="nomes-colaboradores" id="meios_contato">MEIOS DE CONTATO</h2>
+                <img src="imagens/TELEFONE.png" alt="cel">
+                <p class="dados_sinara">+55 11 91003-6750</p>
+                <img src="imagens/pessoa.png" alt="cel">
+                <input type="text">
+                <label for="text">Digite seu nome completo</label>
+                <img src="imagens/EMAIL.png" alt="email">
+                <p class="dados_sinara">sinaraoficial.suporte@gmail.com</p>
+                <input type="text">
+                <label for="text">Digite sua dúvida</label>
+                <a href="https://www.instagram.com/sinara.oficial/"><img src="imagens/instagram-svgrepo-com 1 (1).png" alt="insta"></a>
+                <button class="botao-header" id="enviar">
+                        <a href id="comece_ja">Enviar</a>
+                    </button>
+                <footer id="footer">
+                    <p>&copy; 2025 Sinara. Todos os direitos reservados.</p>
+                </footer>
+            </div>
+        </section>
     </body>
 </html>
