Aplicando algumas coisas no html e css

--- a/Área restirta/Login/index.html
+++ b/Área restirta/Login/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Área restrita</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="login">
         <img src="imagens/logo.png" alt="logo">
@@ -13,14 +15,15 @@
 
         <label for="text" class="label-campos">
 
-                    <input type="text" class="campos" id="nome-campo"
-                        placeholder="Digite seu Email">
-                    <img src="imagens/Vector.png" alt="pessoa" class="icons"
-                        id="person-icon">
-                    <hr id="linha-campo">
-                </label>
+            <input type="text" class="campos" id="nome-campo" placeholder="Digite seu Email">
+            <img src="imagens/Vector.png" alt="pessoa" class="icons" id="person-icon">
+            <hr id="linha-campo">
+
+
+        </label>
 
     </section>
-    
+
 </body>
+
 </html>
